--- a/application.json
+++ b/application.json
@@ -18,8 +18,16 @@
   "icon": "basketball",
   "pages": [
     {
-      "id": "Page1",
+      "id": "Firestore",
       "isDefault": true
+    },
+    {
+      "id": "Gsheet",
+      "isDefault": false
+    },
+    {
+      "id": "Snow",
+      "isDefault": false
     }
   ],
   "unpublishedApplicationDetail": {
