--- a/pages/Snow/Snow.json
+++ b/pages/Snow/Snow.json
@@ -1,23 +1,24 @@
 {
-  "gitSyncId": "674d84b45815aa46e59fa85f_554ecfc4-79ff-499f-8a73-3c400f01951a",
+  "gitSyncId": "674d90341657406aeab8bcbc_09fae931-a58c-47a4-96aa-1cb2dfeb9fdf",
   "unpublishedPage": {
+    "isHidden": false,
     "layouts": [
       {
         "dsl": {
           "backgroundColor": "none",
-          "bottomRow": 5000,
+          "bottomRow": 890,
           "canExtend": true,
           "containerStyle": "none",
           "detachFromLayout": true,
           "dynamicBindingPathList": [],
           "dynamicTriggerPathList": [],
           "leftColumn": 0,
-          "minHeight": 1292,
+          "minHeight": 890,
           "parentColumnSpace": 1,
           "parentRowSpace": 1,
-          "rightColumn": 4896,
+          "rightColumn": 1174,
           "snapColumns": 64,
-          "snapRows": 124,
+          "snapRows": 125,
           "topRow": 0,
           "type": "CANVAS_WIDGET",
           "version": 90,
@@ -26,7 +27,7 @@
         }
       }
     ],
-    "name": "Page1",
-    "slug": "page1"
+    "name": "Snow",
+    "slug": "snow"
   }
 }
