--- a/application.json
+++ b/application.json
@@ -18,7 +18,7 @@
   "icon": "basketball",
   "pages": [
     {
-      "id": "Page1",
+      "id": "Page1fromShadab",
       "isDefault": true
     },
     {
